syntax = "proto3";
package gRPCSample;
option csharp_namespace = "gRPCSample.Proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  string test = 2;
}
